# gpu_quadrature

./: CMakeLists.txt  README.md  batch_runs_no_serial.sh  batch_runs_with_serial.sh  cpu_quadrature.f90  helper_funcs.f90  main.f90  quadrature.cuf
